--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,15 +1,17 @@
 stages:
   - lint
+  - test
   - build
 
 variables:
   NODE_ENV: production
 
-image: node:20-alpine
-
-cache:
-  paths:
-    - node_modules/
+default:
+  image: node:20-alpine
+  cache:
+    key: ${CI_COMMIT_REF_SLUG}
+    paths:
+      - node_modules/
 
 before_script:
   - npm ci
@@ -17,9 +19,17 @@ before_script:
 lint:
   stage: lint
   script:
-    - npm run lint || echo "Lint not configured yet"
+    - npm run lint
+
+test:
+  stage: test
+  script:
+    - npm test
 
 build:
   stage: build
   script:
     - npm run build
+  artifacts:
+    paths:
+      - dist/
