--- a/manifest.json
+++ b/manifest.json
@@ -1,15 +1,32 @@
 {
   "manifest_version": 3,
-  "name": "Confluence AI Search (Local-first)",
-  "description": "Local-first smart search and summaries for Confluence pages. No data leaves your machine.",
+  "name": "__MSG_appName__",
+  "description": "__MSG_appDescription__",
   "version": "0.1.0",
+  "default_locale": "en",
   "permissions": [
     "storage",
-    "sidePanel"
+    "activeTab",
+    "windows"
   ],
+  "action": {
+    "default_title": "__MSG_appName__",
+    "default_popup": "popup.html",
+    "default_icon": {
+      "16": "icons/icon16.png",
+      "32": "icons/icon32.png",
+      "48": "icons/icon48.png",
+      "128": "icons/icon128.png"
+    }
+  },
+  "icons": {
+    "16": "icons/icon16.png",
+    "32": "icons/icon32.png",
+    "48": "icons/icon48.png",
+    "128": "icons/icon128.png"
+  },
   "host_permissions": [
-    "*://*/wiki/*",
-    "*://*/confluence/*"
+    "<all_urls>"
   ],
   "background": {
     "service_worker": "background.js",
@@ -18,15 +35,14 @@
   "content_scripts": [
     {
       "matches": [
-        "*://*/wiki/*",
-        "*://*/confluence/*"
+        "http://*/*",
+        "https://*/*"
       ],
-      "js": ["content.js"],
+      "js": [
+        "content.js"
+      ],
       "run_at": "document_idle"
     }
   ],
-  "side_panel": {
-    "default_path": "panel.html"
-  },
   "options_page": "options.html"
 }
